--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -11,7 +11,7 @@ jobs:
   checkin:
     strategy:
       matrix:
-        os: [ubuntu-latest, self-hosted]
+        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
